--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 
   <!DOCTYPE html>
   <html lang="ar" dir="rtl">
-    <head>
-      <meta charset="UTF-8" />
-      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <title>منصة سرفانا للخدمات</title>
-    </head>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>منصة سرفانا للخدمات</title>
+    <meta name="google-signin-client_id" content="268062404120-nfkt7hf22qe38i8kerp11ju3s22ut4j1.apps.googleusercontent.com">
+    <script src="https://accounts.google.com/gsi/client" async defer></script>
+  </head>
 
     <body>
       <div id="root"></div>
