--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>منصة سرفانا للخدمات</title>
     <meta name="google-signin-client_id" content="268062404120-nfkt7hf22qe38i8kerp11ju3s22ut4j1.apps.googleusercontent.com">
+    <link rel="icon" type="image/svg+xml" href="/assets/srvana-icon-logo.svg" />
     <script src="https://accounts.google.com/gsi/client" async defer></script>
   </head>
 
